Move engine code into its own namespace to avoid name conflicts. Also, made some additional progress with report.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -95,6 +95,13 @@
 }
 
 
+@misc{gta_leak,
+  author = "{Keza MacDonald, Keith Stuart and Alex Hern}",
+  year = "{2022}",
+  month = "{9}",
+  day = "{19}",
+  howpublished = {\url{https://www.theguardian.com/games/2022/sep/19/grand-theft-auto-6-leak-who-hacked-rockstar-and-what-was-stolen}}}
+
 @misc{mit,
   title        = {The MIT License},
   howpublished = {\url{https://opensource.org/license/mit/}}
